--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^6.3.16",
     "react": "^18.2.0",
+    "react-cool-inview": "^3.0.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-lazy-images": "^1.1.0",
